--- a/package.json
+++ b/package.json
@@ -8,11 +8,20 @@
     "@testing-library/user-event": "^12.1.10",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
-    "@types/react": "^17.0.0",
+    "@types/react": "^17.0.3",
+    "@types/react-d3-graph": "^2.3.5",
     "@types/react-dom": "^17.0.0",
+    "@types/react-router-dom": "^5.1.7",
+    "d3": "^5.5.0",
+    "firebase": "^8.3.0",
     "react": "^17.0.1",
+    "react-d3-graph": "^2.6.0",
+    "react-d3-tree": "^2.0.1",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "redux": "^4.0.5",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
